[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Textures/enemy/slimeBlue_blue.png" type="Texture" id=1]
[ext_resource path="res://Assets/Textures/enemy/slimeBlue.png" type="Texture" id=2]
[ext_resource path="res://Assets/Textures/enemy/slimeBlue_squashed.png" type="Texture" id=3]
[ext_resource path="res://enemy.gd" type="Script" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 1 ) ],
"loop": true,
"name": "crawl",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "squashed",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 6, 3.4 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 6, 1 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 7.33526, 8.74333 )

[node name="enemy" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -0.5 )
scale = Vector2( 0.355263, 0.323529 )
frames = SubResource( 1 )
animation = "crawl"
speed_scale = 0.5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -0.5 )
shape = SubResource( 2 )

[node name="detect_edge" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 10 )
collision_mask = 2

[node name="top_checker" type="Area2D" parent="."]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="top_checker"]
position = Vector2( 0, -5 )
shape = SubResource( 3 )

[node name="sides_checker" type="Area2D" parent="."]
scale = Vector2( 1.09062, 0.315644 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="sides_checker"]
position = Vector2( 0, -0.761057 )
scale = Vector2( 1, 1 )
shape = SubResource( 5 )

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[connection signal="body_entered" from="top_checker" to="." method="_on_top_checker_body_entered"]
[connection signal="body_entered" from="sides_checker" to="." method="_on_sides_checker_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
